# sudoku

./: CMakeLists.txt  README.md  run.sh
data/: data.txt
include/: Game.h  Matrix.h  Vector.h  printHelpers.h
src/: Game.c  Matrix.c  Vector.c  main.c  printHelpers.c
